--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 * {
-	margin: 0;
-	padding: 0;
+	margin: 0.2rem;
+	padding: 0rem;
 }
 
 .nav-link {
@@ -13,9 +13,44 @@ nav ul {
 	display: flex;
 	justify-content: space-around;
 	list-style: none;
-	background-color: rgb(44, 113, 240);
+	background-color: rgb(0, 122, 255);
 	padding: 1rem;
+}
+
+nav {
 	position: sticky;
 	top: 0;
 	z-index: 1000;
+}
+
+h1 {
+	text-align: center;
+}
+
+h2 {
+	color: rgb(0, 122, 255);
+}
+
+.btn {
+	display: flex;
+	justify-content: center;
+	margin-top: 0.4rem;
+}
+
+.vote {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 0.2rem;
+}
+
+.login {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.login button {
+	width: 100%;
 }
