--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@ h2 {
 	margin: 0.2rem;
 }
 
-.login {
+.login,
+.signup {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -60,10 +61,13 @@ h2 {
 	width: 100%;
 }
 
+.signup button {
+	width: 100%;
+}
+
 .results {
 	color: rgb(0, 122, 255);
 	text-align: center;
-	width: 95vw;
 	margin: 0 auto;
 }
 
@@ -79,6 +83,7 @@ h3 {
 	text-align: center;
 }
 
-th {
+th,
+td {
 	padding: 0.2rem;
 }
